# DIGNEApy

./: .dockerignore  .gitignore  .precommit-config.yaml  404.html  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_ANSWERS.md  ARCHITECTURE_QUICKREF.md  AUTHORS.md  AUTHORS.rst  BEFORE_AND_AFTER.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  EXTENSION_GUIDE.md  HISTORY.md  HISTORY.rst  IMPLEMENTATION_TEMPLATES.md  LICENSE.md  MANIFEST.in  Makefile  NAVIGATION_GUIDE.md  Planning.md  README.md  README.rst  conftest.py  example.py  gecco_neural_network_experiment.sh  index.html  mkdocs.yml  objects.inv  parallel_exc.py  pyproject.toml  pytest_benchmark.ini  requirements.txt  requirements_dev.txt  ruff.toml  sample_bpp.py  search.html  setup.cfg  setup.py  (+7 more)
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-app.yml  build_wheels.yml  code_analysis.yml  coveralls.yml  deploy.yml  documentation.yml  macos-intel.yml  macos-latest.yml  python-app.yml  ubuntu-latest.yml  windows-latest.yml
CONTRIBUTING/: index.html
authors/: index.html
digneapy/: __init__.py  __main__.py  _constants.py  autoencoders.py  core.py  descriptors.py  domain.py  experiments.py  generator.py  generators.py  generators.py.old  meta_ea.py  metrics.py  nn_novelty_search.py  novelty_search.py  transformers.py  typing.py
digneapy/_core/: __init__.py  _constants.py  _desc_strategies.py  _domain.py  _instance.py  _knn.py  _metrics.py  _novelty_search.py  _perf_metrics.py  _problem.py  _protocols.py  _scores.py  _solution.py  _solver.py  _types.py  descriptors.py  scores.py  types.py
digneapy/archives/: __init__.py  _archive.py  _base_archive.py  _cvt_archive.py  _grid_archive.py  _proximity.py  _stats.py  _unstructured.py  _utils.py  base.py
digneapy/core/: __init__.py  _descriptors.py  _instance.py  _metrics.py  _problem.py  _solution.py  _solver.py  domain.py  instance.py  problem.py  solution.py  solver.py
digneapy/domains/: __init__.py  bin_packing.py  bpp.py  knapsack.py  kp.py  sphere.py  tsp.py
digneapy/generators/: __init__.py  _base_generator.py  _eig.py  _map_elites_gen.py  _perf_metrics.py  _utils.py  dominated.py  evolutionary.py  llm.py  map_elites.py  perf_metrics.py  utils.py
digneapy/lab/: __init__.py  _experiment.py  _run.py
digneapy/models/: kp_scaler_for_ae_different_N.pkl
digneapy/operators/: __init__.py  _crossover.py  _mutation.py  _replacement.py  _selection.py  crossover.py  mutation.py  replacement.py  selection.py  typing.py
digneapy/qd/: __init__.py  _cma_me.py  _desc_strategies.py  _descriptor_strategies.py  _map_elites.py  _novelty_search.py  desc_strategies.py
digneapy/solvers/: __init__.py  _bpp_heuristics.py  _c_tsp_solvers.pyx  _constants.py  _kp.pyx  _kp_heuristics.py  _tsp_opt.pyx  bpp.py  evo.py  evolutionary.py  heuristics.py  kp.py  pisinger.py  random.py  tsp.py  utils.py
digneapy/solvers/_parallel_ea/: CMakeLists.txt
digneapy/solvers/_parallel_ea/src/: PseudoRandom.h  RandomGenerator.h  parallel_ea.cpp
digneapy/solvers/parallel_ea/: CMakeLists.txt  __init__.py  __main__.py  _interface.py  _solver.py
digneapy/solvers/parallel_ea/src/: PseudoRandom.cpp  parallel_ea.cpp
digneapy/solvers/pisinger/: CMakeLists.txt  __init__.py  __main__.py  _interface.py  core.py  example.py  pisinger.py
digneapy/solvers/pisinger/src/: combo.cpp  expknap.cpp  minknap.cpp  pisinger.cpp
digneapy/transformers/: __init__.py  _autoencoders.py  _base.py  _base_transformer.py  _keras_nn.py  _kp_ae.py  _nn_tuner.py  _torch_nn.py  _tuner.py  autoencoders.py  base.py  keras_nn.py  neural.py  pca.py  protocol.py  torch_nn.py  tuner.py
digneapy/utils/: __init__.py  _plots.py  _timers.py  save_data.py  serializer.py  sorting.py
digneapy/visualize/: __init__.py  _archive_plotter.py  _evo_generator_evolution_plot.py  _map_elites_evolution_plot.py
docs/: CONTRIBUTING.md  HISTORY.md  Makefile  authors.md  conf.py  example.md  index.md  index.rst  installation.md  installation.rst  license.md  make.bat  usage.rst
docs/tutorial/: 01_eig_example.md  02_create_domain.md  (+2 more)
documentation/: index.html
example/: index.html
examples/: bin_packing_NN_weights_N_120_2D_best.npy  bin_packing_solvers.py  cvt_kp_generator.py  dominated_ns_bin_packing.py  dominated_ns_bin_packing_neural_network.py  dominated_ns_knapsack.py  dominated_ns_knapsack_neural_network.py  dominated_ns_tsp.py  dominated_ns_tsp_neural_network.py  dominated_nsf_example.py  dominated_nsi_example.py  es_generator_2d.py  evolutionary_llm.py  evolve_nn_bin_packing.py  evolve_nn_full_instances.py  evolve_nn_knapsack.py  evolve_nn_pytorch.py  evolve_nn_tsp.py  fiting_autoencoder_knapsack.py  gecco_24_evolve_nn_transformer.py  gecco_24_gen_best_nn.py  knapsack_decoder_example.py  knapsack_domain_heuristics.py  knapsack_domain_map_elites.py  knapsack_domain_pisinger.py  knapsack_dominated_ns.py  knapsack_evolutionary_solver.py  knapsack_experiment.ini  knapsack_features_hypercube.py  knapsack_heuristics.py  knapsack_pisinger_solvers.py  kp_ae_example.py  kp_ns_8d.py  kp_ns_autoencoders.py  map_elites_cvt_bin_packing.py  map_elites_cvt_knapsack.py  map_elites_cvt_tsp.py  map_elites_grid_knapsack.py  map_elites_grid_sphere.py  nn_transformer_gecco_23.py  (+19 more)
guide/: README_REFACTORING_PACKAGE.md  REFACTORING_STRATEGY.md
installation/: index.html
knapsack_ae_results/: features_max.txt  features_min.txt
license/: index.html
scripts/: autoencoders_experiment.sh  calculate_features.py  concat.py  features_range_knapsack_AE.py  gecco_neural_network_experiment.sh  generate_ref_pages.py  neural_network_knapsack_encoder.sh  novelty_search_knapsack.sh  novelty_search_knapsack_autoencoders.sh  ns_nn_gecco_24.sh  preprocess.py  variable_size_autoencoders.sh  variable_size_experiment.sh
search/: search_index.json
tests/: __init__.py  test_archives.py  test_core.py  test_digneapy.py  test_domain.py  test_domains.py  test_generator.py  test_generators.py  test_imports.py  test_meta_ea.py  test_nn_tuner.py  test_novelty_search.py  test_operators.py  test_solvers.py  test_transformers.py
(+880 files in other folders)
